# Pantheios

./: .gitignore  CMakeLists.txt  INSTALL.txt
examples/: CMakeLists.tpl  (+1 more)
examples/c/example.c.101/: CMakeLists.txt
examples/c/example.c.N/: CMakeLists.txt
examples/c/example.c.assert/: CMakeLists.txt
examples/c/example.c.extended_severity/: CMakeLists.txt
examples/cpp/inserters/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.args/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.b/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.b64/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.blob/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.character/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.hex_ptr/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.hostid/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.i/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.integer/: CMakeLists.txt
examples/cpp/inserters/example.cpp.inserter.m2w/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/be/: CMakeLists.txt
src/backends/bel/: CMakeLists.txt
src/backends/ber/: CMakeLists.txt
src/core/: CMakeLists.txt
src/frontends/: CMakeLists.txt
src/inserters/: CMakeLists.txt
src/util/: CMakeLists.txt
test/component/: CMakeLists.tpl  CMakeLists.txt
test/component/test.component.be.file.threading/: CMakeLists.txt
test/component/test.component.core.getProcessIdentity/: CMakeLists.txt
test/component/test.component.core.initialisation_sequence/: CMakeLists.txt
test/component/test.component.core.pantheios_logprintf/: CMakeLists.txt
test/component/test.component.core.pantheios_logputs/: CMakeLists.txt
test/component/test.component.custom_severity/: CMakeLists.txt
test/component/test.component.inserters.args/: CMakeLists.txt
test/component/test.component.inserters.b64/: CMakeLists.txt
test/component/test.component.inserters.boolean/: CMakeLists.txt
test/component/test.component.inserters.hostId/: CMakeLists.txt
test/component/test.component.inserters.integer/: CMakeLists.txt
test/component/test.component.inserters.m2w/: CMakeLists.txt
test/component/test.component.inserters.pad/: CMakeLists.txt
test/component/test.component.inserters.pointer/: CMakeLists.txt
test/component/test.component.inserters.processId/: CMakeLists.txt
test/component/test.component.inserters.real/: CMakeLists.txt
test/component/test.component.inserters.slice/: CMakeLists.txt
test/component/test.component.inserters.stream_character/: CMakeLists.txt
test/component/test.component.inserters.threadId/: CMakeLists.txt
test/component/test.component.inserters.variant_bool/: CMakeLists.txt
test/component/test.component.inserters.w2m/: CMakeLists.txt
test/component/test.component.log.1/: CMakeLists.txt
test/component/test.component.trace.1/: CMakeLists.txt
test/scratch/: CMakeLists.txt
test/scratch/test.scratch.I18N/: CMakeLists.txt
test/scratch/test.scratch.WideString/: CMakeLists.txt
test/scratch/test.scratch.api/: CMakeLists.txt
test/scratch/test.scratch.be.N/: CMakeLists.txt
test/scratch/test.scratch.be.N.fail/: CMakeLists.txt
test/scratch/test.scratch.be.N.with.custom.fe/: CMakeLists.txt
test/scratch/test.scratch.be.WindowsSyslog/: CMakeLists.txt
test/scratch/test.scratch.be.WindowsSyslog.WithCallback/: CMakeLists.txt
test/scratch/test.scratch.be.file/: CMakeLists.txt
test/scratch/test.scratch.be.file.rolling/: CMakeLists.txt
test/scratch/test.scratch.be.pantheios.COM/: CMakeLists.txt
test/scratch/test.scratch.be.speech/: CMakeLists.txt
test/scratch/test.scratch.be.syslog/: CMakeLists.txt
test/scratch/test.scratch.be.syslog.WithCallback/: CMakeLists.txt
test/scratch/test.scratch.be.zmq/: CMakeLists.txt  test.scratch.be.zmq.cpp
test/scratch/test.scratch.be.zmq.WithCallback/: CMakeLists.txt  zmqreceiver.c
test/scratch/test.scratch.bec.WindowsConsoleCallback/: CMakeLists.txt
test/scratch/test.scratch.bec.WindowsMessageBox/: CMakeLists.txt
test/scratch/test.scratch.c_api/: CMakeLists.txt
test/scratch/test.scratch.extras.com.invoke_nothrow_method/: CMakeLists.txt
test/scratch/test.scratch.extras.com_exception_helpers/: CMakeLists.txt
test/scratch/test.scratch.fe/: CMakeLists.txt
test/scratch/test.scratch.fe.WindowsRegistry/: CMakeLists.txt
test/scratch/test.scratch.fe.WindowsRegistry.controller/: CMakeLists.txt
test/scratch/test.scratch.fe.simple.WithCallback/: CMakeLists.txt
test/scratch/test.scratch.implicit_link/: CMakeLists.txt
test/scratch/test.scratch.pseudoUNIX/: CMakeLists.txt
test/scratch/test.scratch.showPlus.integer/: CMakeLists.txt
test/scratch/test.scratch.trace/: CMakeLists.txt
test/scratch/test.scratch.tstring/: CMakeLists.txt
test/scratch/test.scratch.util.onbailout/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/inserters/: CMakeLists.txt
test/unit/test.unit.be.N/: CMakeLists.txt
test/unit/test.unit.be.WindowsSyslog/: CMakeLists.txt
test/unit/test.unit.be.fail/: CMakeLists.txt
test/unit/test.unit.be.lrsplit/: CMakeLists.txt
test/unit/test.unit.bec.COMErrorObject/: CMakeLists.txt
test/unit/test.unit.bec.fail/: CMakeLists.txt
test/unit/test.unit.bec.file/: CMakeLists.txt
test/unit/test.unit.bec.fprintf/: CMakeLists.txt
test/unit/test.unit.fe.N/: CMakeLists.txt
test/unit/test.unit.fe.WindowsRegistry/: CMakeLists.txt
test/unit/test.unit.fe.all/: CMakeLists.txt
test/unit/test.unit.fe.fail/: CMakeLists.txt
test/unit/test.unit.fe.null/: CMakeLists.txt
test/unit/test.unit.fe.simple/: CMakeLists.txt
test/unit/test.unit.getversion/: CMakeLists.txt
test/unit/test.unit.inserters.windows.sc/: CMakeLists.txt
test/unit/test.unit.levels.dynamic_initialisation/: CMakeLists.txt
test/unit/test.unit.levels.values/: CMakeLists.txt
test/unit/test.unit.util.getcurrenttime/: CMakeLists.txt
test/unit/test.unit.util.gethostname/: CMakeLists.txt
test/unit/test.unit.util.onbailout/: CMakeLists.txt
test/unit/test.unit.util.strnlen/: CMakeLists.txt
(+58 files in other folders)
